final updates before live to be shared in review meeting 01-05-2025

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>eBhuAdhyan - CoE, BNYCRS, LBSNAA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,7 +92,7 @@
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
                                     <a href="index.html" class="nav-item nav-link active">Home</a>
                                     <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="#" class="nav-item nav-link">Courses</a>
+                                    <!-- <a href="#" class="nav-item nav-link">Courses</a> -->
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
@@ -149,9 +149,8 @@
                     <h1 class="display-3 text-white animated slideInDown">About Us</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>                            
+                            <li class="breadcrumb-item text-white active" aria-current="page">About Us</li>
                         </ol>
                     </nav>
                 </div>
@@ -231,7 +230,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+                    <a class="btn btn-secondary py-3 px-5 mt-2 noHand" href="#">Read More</a><span class="badge rounded-pill text-primary">Coming Soon!</span>
                 </div>
             </div>
         </div>
@@ -378,7 +377,7 @@
                     <p>Please subscribe to our newsletter to be on up-to-date about the course And publications.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2 noHand">SignUp</button><span class="badge rounded-pill text-bg-info">Coming Soon!</span>
                     </div>
                 </div>
             </div>
