--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>eBhuAdhyan - CoE, BNYCRS, LBSNAA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,7 +92,7 @@
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
                                     <a href="index.html" class="nav-item nav-link active">Home</a>
                                     <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="courses.html" class="nav-item nav-link">Courses</a>
+                                    <!-- <a href="courses.html" class="nav-item nav-link">Courses</a> -->
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
@@ -149,9 +149,9 @@
                     <h1 class="display-3 text-white animated slideInDown">Our Team</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Team</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                            <li class="breadcrumb-item"><span class="text-white">Pages</span></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Our Team</li>
                         </ol>
                     </nav>
                 </div>
@@ -244,7 +244,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid teamImg" src="img/team/Team_CRS00023.png" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -262,7 +262,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team/Team_CRS00022.png" alt="Akhilesh Yadav">
+                            <img class="img-fluid teamImg" src="img/team/Team_CRS00022.png" alt="Akhilesh Yadav">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -280,7 +280,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team/Team_CRS00021.png" alt="Pushpendra Tomar">
+                            <img class="img-fluid teamImg" src="img/team/Team_CRS00021.png" alt="Pushpendra Tomar">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -372,7 +372,7 @@
                     <p>Please subscribe to our newsletter to be on up-to-date about the course And publications.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2 noHand">SignUp</button><span class="badge rounded-pill text-bg-info">Coming Soon!</span>
                     </div>
                 </div>
             </div>
