--- a/CoursesContent/NAKSHA_Module.html
+++ b/CoursesContent/NAKSHA_Module.html
@@ -120,7 +120,7 @@
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
                                     <a href="index.html" class="nav-item nav-link active">Home</a>
                                     <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="#" class="nav-item nav-link">Courses</a>
+                                    <!-- <a href="#" class="nav-item nav-link">Courses</a> -->
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
