--- a/landSurvey_ReadMore.html
+++ b/landSurvey_ReadMore.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>eBhuAdhyan - CoE, BNYCRS, LBSNAA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,7 +92,7 @@
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
                                     <a href="index.html" class="nav-item nav-link active">Home</a>
                                     <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="courses.html" class="nav-item nav-link">Courses</a>
+                                    <!-- <a href="courses.html" class="nav-item nav-link">Courses</a> -->
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
@@ -539,7 +539,7 @@
                     <p>Please subscribe to our newsletter to be on up-to-date about the course And publications.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2 noHand">SignUp</button><span class="badge rounded-pill text-bg-info">Coming Soon!</span>
                     </div>
                 </div>
             </div>
