removed unwannted links to other pages and standardized home link to new live url

--- a/Basics_GIS_ReadMore.html
+++ b/Basics_GIS_ReadMore.html
@@ -90,17 +90,17 @@
                             </button>
                             <div class="collapse navbar-collapse pt-2" id="navbarCollapse">
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
-                                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                                    <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="courses.html" class="nav-item nav-link">Courses</a>
+                                    <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/" class="nav-item nav-link active">Home</a>
+                                    <a href="./about.html" class="nav-item nav-link">About</a>
+                                    <!-- <a href="courses.html" class="nav-item nav-link">Courses</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
                                             <a href="team.html" class="dropdown-item">Our Team</a>
                                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>                                    
                                         </div>
-                                    </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    </div> -->
+                                    <a href="./contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- <div class="row float-xl-end">
                                         <div class="col col-lg-4 col-md-4 col-sm-3 ">
                                             <img src="img/E-Learning_portal_Logo1_WhiteBG.png" class="logo" alt="CoE, BNYCRS, E-LEARNING LOGO" Title="CoE, BNYCRS, E-Learning"/>
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col col-lg-12">
                                 <span class="text-center" style="font-size:14px;">
-                                    <a href="#" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
+                                    <a href="https://www.lbsnaa.gov.in/lbsnaa-sub/bn-yugandhar-center-for-rural-studies" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
                                 </span>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                     <h1 class="display-3 animated slideInDown">Basics of GIS: Understanding the Magic of Maps Module</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="" href="./index.html">Home</a></li>                            
+                            <li class="breadcrumb-item"><a class="" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
                             <li class="breadcrumb-item active" aria-current="page">Read More</li>
                         </ol>
                     </nav>
@@ -212,7 +212,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/basics_GIS_Banner.jpg" alt="" style="object-fit: contain;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/basicGIS_Cover.jpg" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -372,6 +372,7 @@
                 <h1 class="mb-5">Expert Instructors</h1>
             </div>
             <div class="row g-4">
+                <div class="col-lg-3 col-md-6"></div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -390,7 +391,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/team-1.jpg" alt="">
@@ -425,7 +426,7 @@
                             <small>IIRS - Dehradun</small>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -444,6 +445,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6"></div>
             </div>
         </div>
     </div>
@@ -456,8 +458,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="./about.html">About Us</a>
+                    <a class="btn btn-link" href="./contact.html">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">FAQs & Help</a>
@@ -512,7 +514,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">LBSNAA, BN Yughandar Centre for Rural Studies</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">CoE, BN Yughandar Centre for Rural Studies, LBSNAA</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
@@ -520,7 +522,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
