--- a/CoursesContent/LandSurveyAndManagmentModule.html
+++ b/CoursesContent/LandSurveyAndManagmentModule.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - Land Survey and Management</title>
+    <title>eBhuAdhyan - Land Survey and Management</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -93,16 +93,16 @@
                             </button>
                             <div class="collapse navbar-collapse pt-2" id="navbarCollapse">
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
-                                    <a href="../index.html" class="nav-item nav-link active">Home</a>
+                                    <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/" class="nav-item nav-link">Home</a>
                                     <a href="../about.html" class="nav-item nav-link">About</a>
                                     <!-- <a href="../courses.html" class="nav-item nav-link">Courses</a> -->
-                                    <div class="nav-item dropdown">
+                                    <!-- <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
                                             <a href="../team.html" class="dropdown-item">Our Team</a>
                                             <a href="../testimonial.html" class="dropdown-item">Testimonial</a>                                    
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <a href="../contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- <div class="row float-xl-end">
                                         <div class="col col-lg-4 col-md-4 col-sm-3 ">
@@ -1037,25 +1037,25 @@
                                                     </div>
                                                     <div class="row pt-2">
                                                         <div class="col col-lg-12  col-md-12 col-sm-12 text-center">
-                                                            CORS Introduction - In Hindi &lpar;Source: <a href="https://cors.surveyofindia.gov.in" target="_blank">cors.surveyofindia.gov.in</a>&rpar;
+                                                            CORS Introduction - In Hindi &lpar;Source: <a href="https://youtube.com/@soicors?si=BAD-iiXn9CnWNId5n" target="_blank">SURVEY OF INDIA CORS</a>&rpar;
                                                         </div>
                                                     </div>
                                                     <div class="row pt-2">
                                                         <div class="col col-lg-12">
                                                             <div class="ratio ratio-16x9 pt-2 border border-1 rounded-1">
-                                                                <iframe src="https://www.youtube.com/watch?v=jgc_ALf2LMU" title="CORS Introduction - In Hindi" allowfullscreen></iframe>
+                                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/jgc_ALf2LMU?si=M3k3DbNWnxSk8NoI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                                             </div>                                                            
                                                         </div>
                                                     </div>
                                                     <div class="row pt-2">
                                                         <div class="col col-lg-12  col-md-12 col-sm-12 text-center">
-                                                            CORS Introduction - In English &lpar;Source: <a href="https://cors.surveyofindia.gov.in" target="_blank">cors.surveyofindia.gov.in</a>&rpar;
+                                                            CORS Introduction - In English &lpar;Source: <a href="https://youtube.com/@soicors?si=BAD-iiXn9CnWNId5n" target="_blank">SURVEY OF INDIA CORS</a>&rpar;
                                                         </div>
                                                     </div>
                                                     <div class="row pt-2">
                                                         <div class="col col-lg-12">
                                                             <div class="ratio ratio-16x9 pt-2 border border-1 rounded-1">
-                                                                <iframe src="https://www.youtube.com/watch?v=sxMXPO5L_ZU" title="CORS Introduction - In English" allowfullscreen></iframe>
+                                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/sxMXPO5L_ZU?si=ByEO0V5kKj_68ORB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                                             </div>                                                            
                                                         </div>
                                                     </div>
@@ -2228,7 +2228,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">LBSNAA, BN Yughandar Centre for Rural Studies</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">CoE, BN Yughandar Centre for Rural Studies, LBSNAA</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
@@ -2236,7 +2236,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
