--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,14 +21,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="./lib/animate/animate.min.css" rel="stylesheet">
+    <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,13 +47,13 @@
             <div class="col col-lg-8 col-md-4 col-sm-4 pt-3 ps-4">
                 <a href="https://www.lbsnaa.gov.in" aria-label="Logo of Lal Bahadur Shastri National Academy of Administration" class="navbar-brand align-items-center">
                     <h2 class="m-0 text-primary">
-                        <img src="img/logo.png" alt="Logo of Lal Bahadur Shastri National Academy of Administration" width="225">
+                        <img src="./img/logo.png" alt="Logo of Lal Bahadur Shastri National Academy of Administration" width="225">
                     </h2>
                 </a>
             </div>
             <div class="col col-lg-4 col-md-8 col-sm-8 pt-4 pe-4">
                 <div class="float-xl-end" style="font-size: 0.8rem;">
-                    <img class="img-fluid p-2 " src="img/ashok.jpg" alt="Logo of Ashok Stambh" aria-label="Logo of Ashoka Stambh" style="height: 50px;margin-right:5px;">
+                    <img class="img-fluid p-2 " src="./img/ashok.jpg" alt="Logo of Ashok Stambh" aria-label="Logo of Ashoka Stambh" style="height: 50px;margin-right:5px;">
                     भारत सरकार | Government of India
                 </div>
             </div>
@@ -90,17 +90,17 @@
                             </button>
                             <div class="collapse navbar-collapse pt-2" id="navbarCollapse">
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
-                                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                                    <a href="about.html" class="nav-item nav-link">About</a>
-                                    <a href="#" class="nav-item nav-link">Courses</a>
+                                    <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/" class="nav-item nav-link">Home</a>
+                                    <a href="./about.html" class="nav-item nav-link">About</a>
+                                    <!-- <a href="#" class="nav-item nav-link">Courses</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
                                             <a href="team.html" class="dropdown-item">Our Team</a>
                                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>                                    
                                         </div>
-                                    </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    </div> -->
+                                    <a href="#" class="nav-item nav-link active">Contact</a>
                                     <!-- <div class="row float-xl-end">
                                         <div class="col col-lg-4 col-md-4 col-sm-3 ">
                                             <img src="img/E-Learning_portal_Logo1_WhiteBG.png" class="logo" alt="CoE, BNYCRS, E-LEARNING LOGO" Title="CoE, BNYCRS, E-Learning"/>
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col col-lg-12">
                                 <span class="text-center" style="font-size:14px;">
-                                    <a href="#" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
+                                    <a href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
                                 </span>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                     <h1 class="display-3 text-white animated slideInDown">Contact</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>                            
+                            <li class="breadcrumb-item"><a class="text-white" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
                             <li class="breadcrumb-item text-white active" aria-current="page">Contact</li>
                         </ol>
                     </nav>
@@ -252,8 +252,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/about.html">About Us</a>
+                    <a class="btn btn-link" href="#">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">FAQs & Help</a>
@@ -308,7 +308,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">LBSNAA, BN Yughandar Centre for Rural Studies</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">CoE, BN Yughandar Centre for Rural Studies, LBSNAA</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
@@ -316,7 +316,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
@@ -346,13 +346,13 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="./lib/wow/wow.min.js"></script>
+    <script src="./lib/easing/easing.min.js"></script>
+    <script src="./lib/waypoints/waypoints.min.js"></script>
+    <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
