--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                             </button>
                             <div class="collapse navbar-collapse pt-2" id="navbarCollapse">
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
-                                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                                    <a href="about.html" class="nav-item nav-link">About</a>
+                                    <a href="#" class="nav-item nav-link active">Home</a>
+                                    <a href="./about.html" class="nav-item nav-link">About</a>
                                     <!-- <a href="courses.html" class="nav-item nav-link">Courses</a> -->
-                                    <div class="nav-item dropdown">
+                                    <!-- <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
                                             <a href="team.html" class="dropdown-item">Our Team</a>
                                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>                                    
                                         </div>
-                                    </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    </div> -->
+                                    <a href="./contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- <div class="row float-xl-end">
                                         <div class="col col-lg-4 col-md-4 col-sm-3 ">
                                             <img src="img/E-Learning_portal_Logo1_WhiteBG.png" class="logo" alt="CoE, BNYCRS, E-LEARNING LOGO" Title="CoE, BNYCRS, E-Learning"/>
@@ -454,6 +454,7 @@
                 <h1 class="mb-5">Expert Instructors</h1>
             </div>
             <div class="row g-4">
+                <div class="col-lg-3 col-md-6"></div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -472,7 +473,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/team-1.jpg" alt="">
@@ -507,7 +508,7 @@
                             <small>IIRS - Dehradun</small>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -526,6 +527,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6"></div>
             </div>
         </div>
     </div>
@@ -584,8 +586,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="./about.html">About Us</a>
+                    <a class="btn btn-link" href="./contact.html">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">FAQs & Help</a>
@@ -640,7 +642,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">LBSNAA, BN Yughandar Centre for Rural Studies</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">CoE, BN Yughandar Centre for Rural Studies, LBSNAA</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
