--- a/landSurvey_ReadMore.html
+++ b/landSurvey_ReadMore.html
@@ -21,14 +21,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="./lib/animate/animate.min.css" rel="stylesheet">
+    <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -90,17 +90,17 @@
                             </button>
                             <div class="collapse navbar-collapse pt-2" id="navbarCollapse">
                                 <div class="navbar-nav ms-auto pt-4 p-lg-0">                  
-                                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                                    <a href="about.html" class="nav-item nav-link">About</a>
+                                    <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/" class="nav-item nav-link active">Home</a>
+                                    <a href="./about.html" class="nav-item nav-link">About</a>
                                     <!-- <a href="courses.html" class="nav-item nav-link">Courses</a> -->
-                                    <div class="nav-item dropdown">
+                                    <!-- <div class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu fade-down m-0">
                                             <a href="team.html" class="dropdown-item">Our Team</a>
                                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>                                    
                                         </div>
-                                    </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    </div> -->
+                                    <a href="./contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- <div class="row float-xl-end">
                                         <div class="col col-lg-4 col-md-4 col-sm-3 ">
                                             <img src="img/E-Learning_portal_Logo1_WhiteBG.png" class="logo" alt="CoE, BNYCRS, E-LEARNING LOGO" Title="CoE, BNYCRS, E-Learning"/>
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col col-lg-12">
                                 <span class="text-center" style="font-size:14px;">
-                                    <a href="#" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
+                                    <a href="https://www.lbsnaa.gov.in/lbsnaa-sub/bn-yugandhar-center-for-rural-studies" class="text-dark"> B.N. Yugandhar Center for Rural Studies<br>( The center dedicated to Research, Training and Policies Suggestions. )</a>
                                 </span>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                     <h1 class="display-3 text-white animated slideInDown">Land Survey Basics Module</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>                            
+                            <li class="breadcrumb-item"><a class="text-white" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
                             <li class="breadcrumb-item text-white active" aria-current="page">Read More</li>
                         </ol>
                     </nav>
@@ -408,6 +408,7 @@
                 <h1 class="mb-5">Expert Instructors</h1>
             </div>
             <div class="row g-4">
+                <div class="col-lg-3 col-md-6"></div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -426,7 +427,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/team-1.jpg" alt="">
@@ -461,7 +462,7 @@
                             <small>IIRS - Dehradun</small>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
@@ -480,6 +481,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6"></div>
             </div>
         </div>
     </div>
@@ -492,8 +494,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="./about.html">About Us</a>
+                    <a class="btn btn-link" href="./contact.html">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">FAQs & Help</a>
@@ -548,7 +550,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">LBSNAA, BN Yughandar Centre for Rural Studies</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="https://www.lbsnaa.gov.in/lbsnaa-sub_org/organizations/bn-yugandhar-center-for-rural-studies">CoE, BN Yughandar Centre for Rural Studies, LBSNAA</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
@@ -556,7 +558,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
@@ -587,12 +589,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="./lib/easing/easing.min.js"></script>
+    <script src="./lib/waypoints/waypoints.min.js"></script>
+    <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
