removed text place holder in latin and replaced with meaningfull words

--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                             <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>From the esteemed faculty members of LBSNAA, Mussoorie</p>
+                            <p>From the esteemed faculty members of CoE, LBSNAA.</p>
                         </div>
                     </div>
                 </div>
