--- a/Basics_GIS_ReadMore.html
+++ b/Basics_GIS_ReadMore.html
@@ -162,41 +162,43 @@
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                            <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>From the esteemed faculty members of LBSNAA, Mussoorie</p>
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
+                                <h5 class="mb-3">Skilled Instructors</h5>
+                                <p>From the esteemed faculty members of CoE, LBSNAA.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
-                            <p>Simple learning managment system to learn and self evaluate</p>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">                   
+                        <div class="service-item text-center pt-3">                        
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-play text-primary mb-4"></i>
+                                <h5 class="mb-3">Video Tutorials</h5>
+                                <p>Simple learning managment system to learn and self evaluate</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Certifications</h5>
-                            <p>Earn certificates for certain courses</p>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-award text-primary mb-4"></i>
+                                <h5 class="mb-3">Certifications</h5>
+                                <p>Earn certificates for certain courses</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                            <h5 class="mb-3">E-Library</h5>
-                            <p>One stop place for visualize all our publications</p>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
+                                <h5 class="mb-3">E-Library</h5>
+                                <p>One stop place for visualize all our publications</p>
+                            </div>
                         </div>
                     </div>
                 </div>
