--- a/NAKSHA_ReadMore.html
+++ b/NAKSHA_ReadMore.html
@@ -169,15 +169,15 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                             <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>From the esteemed faculty members of LBSNAA, Mussoorie</p>
+                            <p>From the esteemed faculty members of CoE, LBSNAA.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item text-center pt-3">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">                   
+                    <div class="service-item text-center pt-3">                        
                         <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
+                            <i class="fa fa-3x fa-play text-primary mb-4"></i>
+                            <h5 class="mb-3">Video Tutorials</h5>
                             <p>Simple learning managment system to learn and self evaluate</p>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-award text-primary mb-4"></i>
                             <h5 class="mb-3">Certifications</h5>
                             <p>Earn certificates for certain courses</p>
                         </div>
