--- a/landSurvey_ReadMore.html
+++ b/landSurvey_ReadMore.html
@@ -169,25 +169,25 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                             <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>From the esteemed faculty members of CoE, LBSNAA.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item text-center pt-3">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">                   
+                    <div class="service-item text-center pt-3">                        
                         <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <i class="fa fa-3x fa-play text-primary mb-4"></i>
+                            <h5 class="mb-3">Video Tutorials</h5>
+                            <p>Simple learning managment system to learn and self evaluate</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Home Projects</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <i class="fa fa-3x fa-award text-primary mb-4"></i>
+                            <h5 class="mb-3">Certifications</h5>
+                            <p>Earn certificates for certain courses</p>
                         </div>
                     </div>
                 </div>
@@ -195,8 +195,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                            <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h5 class="mb-3">E-Library</h5>
+                            <p>One stop place for visualize all our publications</p>
                         </div>
                     </div>
                 </div>
