Added contents to update in live site

--- a/landSurvey_ReadMore.html
+++ b/landSurvey_ReadMore.html
@@ -240,7 +240,7 @@
                         </p>
                         <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction to Land Surveying</h6>
                         <p class="textJustify">
-                            Land surveying is the process of measuring and mapping land to establish boundaries and create accurate land records. It helps determine land ownership, resolve disputes, and guide land development.
+                            Land surveying is the process of measuring and mapping of land to establish boundaries and create accurate land records. It helps to determine the land ownership, resolving disputes, and to guide in land development.
                             <h6>Key Concepts:</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
@@ -268,7 +268,7 @@
                         </p>
                         <h6 class="section-title bg-white text-start text-primary pe-3">2. Survey of India's CORS Service</h6>
                         <p class="textJustify">
-                            Survey of India's CORS service which helps to generate high accuracy and precise points using rovers and NRTK system.
+                            Survey of India's CORS service - It helps to generate high accuracy and precise points using rovers and NRTK system.
                             <h6>Key Features and Services of CORS:</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
@@ -278,11 +278,11 @@
                                     <p class="mb-0"><b>Reference Data Services</b></p>
                                 </div>                                
                             </div>
-                            <h6>CORS Station Distribution Map for all CoE States</h6>                            
+                            <h6>CORS Station Distribution Map for all States of CoE, BNYCRS, LBSNAA</h6>                            
                         </p>
                         <h6 class="section-title bg-white text-start text-primary pe-3">3. Field Survey Steps - An Overview</h6>
                         <p class="textJustify">
-                            An overview of the field survey salient instructions and a simple step by step description of the methodologies used for field surveying using an urban city survey scenario case studies.
+                            An overview of the field survey's salient instructions and a simple step by step description of the methodologies which is used for field survey, by using an urban city survey scenario based case studies.
                             <h6>Field Survey of Land Parcel - Basics:</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
@@ -292,50 +292,26 @@
                             <h6>Tools Used for Land Survey</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Understanding GNSS Receivers (GNSS Rovers)</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Real-Time Kinematic (RTK) GPS – High-Precision Positioning</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Electronic Total Station (ETS) with GNSS – Advanced Surveying Technology</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Field Data Collector (FDC) with WebGIS for Field Survey</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Distance-Distance Measurement using a Laser Range Finder</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Reference Stations – Correcting GPS/GNSS Errors</b></p>
-                                </div>                                
+                                    <ul>
+                                        <li><b>Understanding GNSS Receivers (GNSS Rovers)</b></li>
+                                        <li><b>Real-Time Kinematic (RTK) GPS </b>– High-Precision Positioning</li>
+                                        <li><b>Electronic Total Station (ETS) with GNSS </b>– Advanced Surveying Technology</li>
+                                        <li><b>Field Data Collector (FDC)</b> with <b>WebGIS</b> for Field Survey</li>
+                                        <li>Distance-Distance Measurement using a <b>Laser Range Finder</b></li>
+                                        <li><b>Reference Stations </b>– Correcting GPS/GNSS Errors</li>
+                                    </ul>
+                                </div>
                             </div>
                             <h6>Field survey - Methodologies and Salient Instructions</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Surveying Properties in a City – Simplified Steps</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Field Survey: Salient Instructions</b></p>
-                                </div>                                
-                            </div>
-                            <div class="row gy-2 gx-4 mb-4">
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>Field Survey Methodologies</b></p>
-                                </div>                                
-                            </div>                                              
+                                    <ul>
+                                        <li>Surveying Properties in a City – Simplified Steps</li>
+                                        <li>Field Survey: Salient Instructions</li>
+                                        <li>Field Survey Methodologies</li>
+                                    </ul>
+                                </div>
+                            </div>                                                                         
                         </p>
                         <!-- <h6 class="section-title bg-white text-start text-primary pe-3">2. Digitization of Paper Maps</h6>
                         <p class="textJustify">
