Enabled the buttons for opening the GIS Module

--- a/Basics_GIS_ReadMore.html
+++ b/Basics_GIS_ReadMore.html
@@ -358,7 +358,7 @@
                             <b class="text-primary">Welcome to the future of maps — where data meets action!</b>
                         </p>                        
                     </div>
-                    <a class="btn btn-secondary py-3 px-5 mt-2" href="#"><i class="fa fa-rocket text-white me-2 noHand"></i>Launch E-Module</a><span class="badge rounded-pill text-danger">Coming Soon!</span>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="./CoursesContent/Basics_GIS_Module.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
                 </div>
             </div>
         </div>
