--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <h1 class="display-3 text-white animated slideInDown">Basics of GIS: Understanding the Magic of Maps</h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners</p>
                                 <a href="./Basics_GIS_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="#" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight noHand">View Now</a><span class="badge rounded-pill text-bg-info">Coming Soon!</span>
+                                <a href="./CoursesContent/Basics_GIS_Module.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
                             </div>
                         </div>
                     </div>
